force-app/main/default/objects/custom_create312__c/custom_create312__c.object-meta.xml
<CustomObject>
    <label>Custom created object312</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects312</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>