force-app/main/default/objects/custom_create312__c/fields/custom_create_312field572__c.field-meta.xml
<CustomField>
    <fullName>custom_create_312field572__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 312field572</label>
    <type>Checkbox</type>
</CustomField>